--- a/index.html
+++ b/index.html
@@ -178,36 +178,45 @@
             <img src="./images/photo-grid/photo-grid__item-11.png" alt="Изображение" class="photo-grid_item">
             <img src="./images/photo-grid/photo-grid__item-12.png" alt="Изображение" class="photo-grid_item">
         </div>
-        <section class="places__description">
-            <div class="places">
+        
+        <section class="places">
+            <div class="places__item">
                 <h3 class="places-title">Куршская коса</h3>
                 <img src="./images/places/places__image-1.png" alt="Изображение" class="places-image">
                 <a href="#" class="places-website">park-kosa.ru</a>
-                <p class="places-paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                <p class="places-paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                <div class="place__description">
+                    <p class="places-paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                    <p class="places-paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                </div>
             </div>
-            <div class="places">
+            <div class="places__item">
                 <h3 class="places-title">Кольский</h3>
                 <img src="./images/places/places__image-2.png" alt="Изображение" class="places-image">
                 <a href="#" class="places-website">National Geographic</a>
-                <p class="places-paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                <p class="places-paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+                <div class="place__description">
+                    <p class="places-paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                    <p class="places-paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+                </div>
             </div>
-            <div class="places">
+            <div class="places__item">
                 <h3 class="places-title">Алтай</h3>
                 <img src="./images/places/places__image-3.png" alt="Изображение" class="places-image">
                 <a href="#" class="places-website">Facebook</a>
-                <p class="places-paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-                <p class="places-paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                <div class="place__description">
+                    <p class="places-paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+                    <p class="places-paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                </div>
             </div>
-            <div class="places">
+            <div class="places__item">
                 <h3 class="places-title">Зимний Байкал</h3>
                 <img src="./images/places/places__image-4.png" alt="Изображение" class="places-image">
                 <a href="#" class="places-website">https://vk.com/baikalmile</a>
-                <p class="places-paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-                <p class="places-paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                <div class="place__description">
+                    <p class="places-paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                    <p class="places-paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                </div>
             </div>
-            <div class="places">
+            <div class="places__item">
                 <h3 class="places-title">Карелия</h3>
                 <img src="./images/places/places__image-5.png" alt="Изображение" class="places-image">
                 <a href="#" class="places-website">http://vodlozero.ru/</a>
