--- a/index.html
+++ b/index.html
@@ -164,19 +164,19 @@
             </ul>
         </div>
 
-        <div class="photo__grid">
-            <img src="./images/photo-grid/photo-grid__item-1.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-2.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-3.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-4.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-5.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-6.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-7.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-8.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-9.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-10.png" alt="Изображение" class="photo__grid-item">
-            <img src="./images/photo-grid/photo-grid__item-11.png" alt="Изображение" class="photo__grid_item">
-            <img src="./images/photo-grid/photo-grid__item-12.png" alt="Изображение" class="photo__grid-item">
+        <div class="photo-grid">
+            <img src="./images/photo-grid/photo-grid__item-1.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-2.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-3.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-4.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-5.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-6.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-7.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-8.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-9.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-10.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-11.png" alt="Изображение" class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid__item-12.png" alt="Изображение" class="photo-grid__item">
         </div>
         
         <section class="places">
@@ -191,7 +191,7 @@
             </div>
             <div class="places__item">
                 <h3 class="places__title">Кольский</h3>
-                <img src="./images/places/places__image-2.png" alt="Изображение" class="places-image">
+                <img src="./images/places/places__image-2.png" alt="Изображение" class="places__image">
                 <a href="#" class="places__website">National Geographic</a>
                 <div class="place__description">
                     <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -200,7 +200,7 @@
             </div>
             <div class="places__item">
                 <h3 class="places__title">Алтай</h3>
-                <img src="./images/places/places__image-3.png" alt="Изображение" class="places-image">
+                <img src="./images/places/places__image-3.png" alt="Изображение" class="places__image">
                 <a href="#" class="places__website">Facebook</a>
                 <div class="place__description">
                     <p class="places__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -209,7 +209,7 @@
             </div>
             <div class="places__item">
                 <h3 class="places__title">Зимний Байкал</h3>
-                <img src="./images/places/places__image-4.png" alt="Изображение" class="places-image">
+                <img src="./images/places/places__image-4.png" alt="Изображение" class="places__image">
                 <a href="#" class="places__website">https://vk.com/baikalmile</a>
                 <div class="place__description">
                     <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -218,11 +218,15 @@
             </div>
             <div class="places__item">
                 <h3 class="places__title">Карелия</h3>
-                <img src="./images/places/places__image-5.png" alt="Изображение" class="places-image">
+                <img src="./images/places/places__image-5.png" alt="Изображение" class="places__image">
                 <a href="#" class="places__website">http://vodlozero.ru/</a>
                 <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
         </section>
+
+        <div class="baikal">
+            <img src="./images/cover-trains.jpg" alt="Ковер поезд" class="baikal__image">
+        </div>
     </div>
 </body>
 </html>
