Редактирование блока Байкал

--- a/index.html
+++ b/index.html
@@ -226,7 +226,12 @@
 
         <div class="baikal">
             <img src="./images/cover-trains.jpg" alt="Ковер поезд" class="baikal__image">
+            <div class="baikal__text">
+                <p class="baikal__text_top">До Байкала «на собаках»</p>
+                <p class="baikal__text_bottom">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            </div>
         </div>
+
     </div>
 </body>
 </html>
