--- a/index.html
+++ b/index.html
@@ -225,11 +225,8 @@
         </section>
 
         <div class="baikal">
-            <img src="./images/cover-trains.jpg" alt="Ковер поезд" class="baikal__image">
-            <div class="baikal__text">
-                <p class="baikal__text_top">До Байкала «на собаках»</p>
-                <p class="baikal__text_bottom">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-            </div>
+            <h3 class="baikal__title">До Байкала «на собаках»</h3>
+            <h4 class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
         </div>
 
     </div>
