--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
             <img src="./images/__image.png" alt="Изображение" class="lead__image">
             <p class="lead__caption">ваша полка — верхняя</p>
-        </section>
 
-        <div class="intro">
-            <p class="intro__title">Чего мы там не видели?</p>
-            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-            <ul class="intro__list">
-                <li class="intro__list-item">Часовых поясов 11</li>
-                <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-                <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-                <li class="intro__list-item">Природных заповедников 105</li>
-                <li class="intro__list-item">Аэропортов 241</li>
-            </ul>
-        </div>
+            <div class="intro">
+                <p class="intro__title">Чего мы там не видели?</p>
+                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+                <ul class="intro__list">
+                    <li class="intro__list-item">Часовых поясов 11</li>
+                    <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
+                    <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
+                    <li class="intro__list-item">Природных заповедников 105</li>
+                    <li class="intro__list-item">Аэропортов 241</li>
+                </ul>
+            </div>
+
+        </section>
 
         <div class="photo-grid">
             <img src="./images/photo-grid/photo-grid__item-1.png" alt="Изображение" class="photo-grid__item">
@@ -97,7 +98,7 @@
         </section>
 
         <div class="baikal">
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="baikal__link">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="baikal__link">
                 <h3 class="baikal__title">До Байкала «на собаках»</h3>
                 <h4 class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
             </a>
