--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img src="./images/__logo.png" alt="" class="header__logo">
+            <img src="./images/__logo.png" alt="Изображение" class="header__logo">
             <div class="header__links">
                 <a href="#" class="header__lang-link">RU</a>
                 <a href="#" class="header__lang-link">EN</a>
@@ -20,24 +20,26 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img src="./images/__image.png" alt="Изображение" class="lead__image">
+            <!-- <img src="./images/__image.png" alt="Изображение" class="lead__image"> -->
             <p class="lead__caption">ваша полка — верхняя</p>
 
-            <div class="intro">
-                <p class="intro__title">Чего мы там не видели?</p>
-                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-                <ul class="intro__list">
-                    <li class="intro__list-item">Часовых поясов 11</li>
-                    <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-                    <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-                    <li class="intro__list-item">Природных заповедников 105</li>
-                    <li class="intro__list-item">Аэропортов 241</li>
-                </ul>
-            </div>
+            
 
         </section>
 
-        <div class="photo-grid">
+        <div class="intro">
+            <p class="intro__title">Чего мы там не видели?</p>
+            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+            <ul class="intro__list">
+                <li class="intro__list-item">Часовых поясов 11</li>
+                <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
+                <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
+                <li class="intro__list-item">Природных заповедников 105</li>
+                <li class="intro__list-item">Аэропортов 241</li>
+            </ul>
+        </div>
+
+        <!-- <div class="photo-grid">
             <img src="./images/photo-grid/photo-grid__item-1.png" alt="Изображение" class="photo-grid__item">
             <img src="./images/photo-grid/photo-grid__item-2.png" alt="Изображение" class="photo-grid__item">
             <img src="./images/photo-grid/photo-grid__item-3.png" alt="Изображение" class="photo-grid__item">
@@ -113,7 +115,7 @@
                 <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
                 <li class="footer__item">© 2022. Башкирова Анастасия</li>
             </ul>
-        </footer>
+        </footer> -->
 
     </div>
 </body>
