--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <!-- <img src="./images/__image.png" alt="Изображение" class="lead__image"> -->
-            <p class="lead__caption">ваша полка — верхняя</p>
+            <div class="lead__image-block">
+                <img src="./images/__image.png" alt="Изображение" class="lead__image">
+                <p class="lead__caption">ваша полка — верхняя</p>
+            </div>
 
             
-
         </section>
 
         <div class="intro">
@@ -39,7 +40,7 @@
             </ul>
         </div>
 
-        <!-- <div class="photo-grid">
+        <div class="photo-grid">
             <img src="./images/photo-grid/photo-grid__item-1.png" alt="Изображение" class="photo-grid__item">
             <img src="./images/photo-grid/photo-grid__item-2.png" alt="Изображение" class="photo-grid__item">
             <img src="./images/photo-grid/photo-grid__item-3.png" alt="Изображение" class="photo-grid__item">
@@ -64,7 +65,9 @@
                     <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
                 </div>
             </div>
-            <div class="places__item">
+            
+        </section>
+            <!-- <div class="places__item">
                 <h3 class="places__title">Кольский</h3>
                 <img src="./images/places/places__image-2.png" alt="Изображение" class="places__image">
                 <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="places__website">National Geographic</a>
