--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
 
          <footer class="footer">
             <ul class="footer__list">
-                <li class="footer__list_item"><a href="https://yandex.ru/maps" class="footer__list_link">Карты</a></li>
-                <li class="footer__list_item"><a href="https://yandex.ru/pogoda" class="footer__list_link">Погода</a></li>
-                <li class="footer__list_item"><a href="https://rasp.yandex.ru" class="footer__list_link">Расписание</a></li>
-                <li class="footer__list_item"><a href="https://calendar.yandex.ru" class="footer__list_link">Календарь</a></li>
-                <li class="footer__list_item"><a href="https://travel.yandex.ru" class="footer__list_link">Путешествия</a></li>
-                <li class="footer__list_item">© 2022. Башкирова Анастасия</li>
+                <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+                <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+                <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+                <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+                <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+                <li class="footer__item">© 2022. Башкирова Анастасия</li>
             </ul>
         </footer>
 
