--- a/index.html
+++ b/index.html
@@ -113,14 +113,17 @@
             </div>
         </section>
 
-       <!-- <div class="baikal">
+       <div class="baikal">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="baikal__link">
-                <h3 class="baikal__title">До Байкала «на собаках»</h3>
-                <h4 class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
+                <div class="baikal__text-block">
+                    <h3 class="baikal__text-block_title">До Байкала «на собаках»</h3>
+                    <h4 class="baikal__text-block_subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
+                 </div>
+                <img src="./images/cover-trains.jpg" alt="Байкал" class="baikal__image">
             </a>
         </div>
 
-         <footer class="footer">
+        <!-- <footer class="footer">
             <ul class="footer__list">
                 <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
                 <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
