--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
                 <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
                 <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
-                <li class="footer__item">© 2022. Башкирова Анастасия</li>
             </ul>
+            <p class="footer__copyright">© 2022. Башкирова Анастасия</p>
         </footer>
 
     </div>
