--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
        <div class="baikal">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="baikal__link">
                 <div class="baikal__text-block">
-                    <h3 class="baikal__text-block_title">До Байкала «на собаках»</h3>
-                    <h4 class="baikal__text-block_subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
+                    <h3 class="baikal__title">До Байкала «на собаках»</h3>
+                    <h4 class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
                  </div>
                 <img src="./images/cover-trains.jpg" alt="Байкал" class="baikal__image">
             </a>
